--- a/force-app/main/default/classes/JoaoClass.cls
+++ b/force-app/main/default/classes/JoaoClass.cls
@@ -1,6 +1,7 @@
 public inherited sharing class JoaoClass {
     public JoaoClass() {
         //  Change for branch Joao-II
+        // Changge II for branch Joao-II
 
     }
 }
