--- a/force-app/main/default/classes/CreateOpportunity.cls
+++ b/force-app/main/default/classes/CreateOpportunity.cls
@@ -1,5 +1,6 @@
 public inherited sharing class CreateOpportunity {
     public CreateOpportunity() {
         //This is an opportunity
+        //just a test
     }
 }
