--- a/force-app/main/default/classes/CreateOpportunity.cls
+++ b/force-app/main/default/classes/CreateOpportunity.cls
@@ -1,5 +1,5 @@
 public inherited sharing class CreateOpportunity {
     public CreateOpportunity() {
-        //This is an opportunity
+        //Hopefuly it will work
     }
 }
