--- a/force-app/main/default/classes/CreateOppTest.cls
+++ b/force-app/main/default/classes/CreateOppTest.cls
@@ -3,6 +3,6 @@ public inherited sharing class CreateOppTest {
     static testMethod void testInsertAccount() {
         CreatingAccount ca = new CreatingAccount();
         ca.createAccount('TestclassAcc1');
-        //
+        System.assertEquals(true, true);
     }
 }
