--- a/force-app/main/default/classes/CreateAccTest.cls
+++ b/force-app/main/default/classes/CreateAccTest.cls
@@ -2,6 +2,7 @@
 public inherited sharing class CreateAccTest {
     static testMethod void testInsertAccount() {
         CreatingAccount ca = new CreatingAccount();
+        //sec
         ca.createAccount('TestclassAcc1');
         System.assertEquals(true, true, 'err');
     }
