--- a/force-app/main/default/classes/CreatingAccount.cls
+++ b/force-app/main/default/classes/CreatingAccount.cls
@@ -2,6 +2,7 @@ public inherited sharing class CreatingAccount {
         public Account createAccount(String name) {
                 Account acc = new Account();
                 acc.Name = name;
+                //sec
                 return acc;
         }
 }
